# polyminis-core

./: .gitignore  Cargo.toml  README.md
src/: actuators.rs  config.rs  control.rs  environment.rs  evaluation.rs  genetics.rs  instincts.rs  lib.rs  macros.rs  morphology.rs  ph.rs  physics.rs  polymini.rs  random.rs  sensors.rs  serialization.rs  simulation.rs  species.rs  thermal.rs  traits.rs  types.rs  uuid.rs
tests/: lib.rs
