[package]
name = "polyminis-core"
version = "0.1.0"
authors = ["Ricardo Sisnett <sisnett@polyminis.com>"]

[dependencies]
rust-monster = { git = "https://github.com/mrjackinc/rust-monster.git" }
snowflake = "^1.2.0"
log = "0.3.6"
ncollide = "0.10.0"
nalgebra = "0.9.0"

[dev-dependencies]
env_logger = "0.3.2"
